[gd_scene load_steps=16 format=3 uid="uid://iuljkfh27e1x"]

[ext_resource type="Script" path="res://Objects/Minerals/Mineral.gd" id="1_pq5mt"]
[ext_resource type="PackedScene" uid="uid://cjyilbm4ucc7s" path="res://addons/godot-xr-tools/objects/climbable.tscn" id="2_gon8e"]
[ext_resource type="Resource" uid="uid://djvpgqr1wy1ut" path="res://Objects/Minerals/rock.tres" id="2_xf3x7"]
[ext_resource type="Script" path="res://Components/Hurtbox.gd" id="3_oekjq"]
[ext_resource type="Script" path="res://Entities/Health.gd" id="4_hmoqp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ss07b"]

[sub_resource type="Gradient" id="Gradient_jqysu"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_a2220"]
gradient = SubResource("Gradient_jqysu")

[sub_resource type="Gradient" id="Gradient_v034a"]
colors = PackedColorArray(0, 0, 0, 1, 0.658834, 0.130338, 0.202627, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_agns0"]
gradient = SubResource("Gradient_v034a")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fx6fb"]
direction = Vector3(0, 1, 0)
spread = 1.0
initial_velocity_min = 1.0
initial_velocity_max = 2.0
radial_velocity_max = 2.0
color = Color(0.742813, 0.120158, 0.492057, 1)
color_ramp = SubResource("GradientTexture1D_agns0")
color_initial_ramp = SubResource("GradientTexture1D_a2220")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bn2lj"]
albedo_color = Color(0.595041, 0.309576, 0.133162, 1)

[sub_resource type="SphereMesh" id="SphereMesh_a6qsw"]
material = SubResource("StandardMaterial3D_bn2lj")
radius = 0.2
height = 0.4
radial_segments = 6
rings = 1

[sub_resource type="Skin" id="Skin_ogjjf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ghsbi"]

[node name="Mineral" type="Node3D"]
script = ExtResource("1_pq5mt")
data = ExtResource("2_xf3x7")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_ss07b")

[node name="Climbable" parent="." instance=ExtResource("2_gon8e")]

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
emitting = false
amount = 20
lifetime = 0.8
one_shot = true
explosiveness = 1.0
randomness = 0.08
process_material = SubResource("ParticleProcessMaterial_fx6fb")
draw_pass_1 = SubResource("SphereMesh_a6qsw")
draw_skin = SubResource("Skin_ogjjf")

[node name="Hurtbox" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("3_oekjq")

[node name="Health" type="Node3D" parent="Hurtbox"]
script = ExtResource("4_hmoqp")
max_health = 150

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
shape = SubResource("BoxShape3D_ghsbi")

[node name="RayDown" type="RayCast3D" parent="."]

[node name="RayUp" type="RayCast3D" parent="."]
target_position = Vector3(0, 1, 0)

[node name="RayLeft" type="RayCast3D" parent="."]
target_position = Vector3(-1, 0, 0)
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="RayRight" type="RayCast3D" parent="."]
target_position = Vector3(1, 0, 0)
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="RayFront" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 1)
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="RayBack" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -1)
debug_shape_custom_color = Color(0, 1, 0, 1)

[connection signal="area_entered" from="Hurtbox" to="Hurtbox" method="_on_area_entered"]
[connection signal="die" from="Hurtbox/Health" to="." method="_on_health_die"]
